# mixed-workload-serving-benchmark

./: Makefile  README.md  pyproject.toml
configs/: default.json  high_contention.json  live_ollama.json  live_ollama_r5.json  live_ray_serve.json  live_ray_serve_r5.json  live_sglang.json  live_sglang_r5.json  live_vllm.json  live_vllm_r5.json
docs/: free_gpu_colab_kaggle.md  results.md  technical_note_template.md
notebooks/: analysis_entrypoint.ipynb  serve_ray_serve_colab.ipynb  serve_sglang_colab.ipynb  serve_vllm_colab.ipynb
results/: default_run.json  high_contention_sweep.csv  live_ollama_run.json  live_ollama_sweep.csv  live_ollama_sweep_r5.csv  live_ollama_trace.jsonl  live_ray_serve_run.json  live_ray_serve_trace.jsonl  live_sglang_run.json  live_sglang_trace.jsonl  sweep.csv
results/traces/live_ollama/: trace_agentic-priority_s0.1_a0.9.jsonl  trace_agentic-priority_s0.5_a0.5.jsonl  trace_agentic-priority_s0.9_a0.1.jsonl  trace_fifo_s0.1_a0.9.jsonl  trace_fifo_s0.5_a0.5.jsonl  trace_fifo_s0.9_a0.1.jsonl  trace_shortest-job-first_s0.1_a0.9.jsonl  trace_shortest-job-first_s0.5_a0.5.jsonl  trace_shortest-job-first_s0.9_a0.1.jsonl
scripts/: make_report_md.py  plot_sweep.py  probe_live_endpoints.py  run_default.sh
scripts/cloud/: write_remote_config.py
src/mixed_workload_serving_benchmark.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mws_bench/: __init__.py  cli.py  config.py  live_ollama.py  live_openai_compatible.py  metrics.py  runner.py  simulator.py  workload.py
tests/: test_smoke.py
(+9 files in other folders)
