[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mixed-workload-serving-benchmark"
version = "0.1.0"
description = "Benchmark harness for mixed streaming and agentic serving workloads"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Aaliyan" }
]
dependencies = []

[project.scripts]
mws-bench = "mws_bench.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
