[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mixed-workload-serving-benchmark"
version = "0.1.0"
description = "Benchmark harness for mixed streaming and agentic serving workloads"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Aaliyan" }
]
dependencies = []

[project.optional-dependencies]
analysis = [
  "matplotlib>=3.8",
]
notebook = [
  "jupyterlab>=4.2",
  "ipykernel>=6.29",
  "matplotlib>=3.8",
]
dev = [
  "pytest>=8.0",
  "matplotlib>=3.8",
  "jupyterlab>=4.2",
  "ipykernel>=6.29",
]

[project.scripts]
mws-bench = "mws_bench.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
